--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "homepage": "http://framework.zend.com/",
     "require": {
         "php": ">=5.5",
+        "monolog/monolog": "~1.9",
         "zendframework/zendframework": "~2.5",
         "zendframework/zftool": "dev-master"
     },
